Minor bug fix to timer logic + shifted header

--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -1,7 +1,7 @@
 @import "../../assets/styles/mixins";
 
 .app-header {
-	margin: 30px 0 10px 30px;
+	margin: 5% 0 10px 5%;
 	position: absolute;
 	z-index: 1;
 
